[gd_scene load_steps=18 format=3 uid="uid://dkmnjoqamejhy"]

[ext_resource type="FontFile" uid="uid://llyue0qrvm3r" path="res://Assets/Fonts/ProggyClean.ttf" id="1_b3rd3"]
[ext_resource type="Script" uid="uid://b1tm4rea8e2fe" path="res://Scripts/new_loop_wait_menu.gd" id="2_jw2p1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jw2p1"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qlpw"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvuxm"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tgduv"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bll2y"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tytww"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nx5oj"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ljg2"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b440"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mhag"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhgih"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fmiv"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hfikd"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5hoo"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tepnl"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[node name="LoopStartWaitMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jw2p1")

[node name="Buttons" type="VBoxContainer" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -80.5
offset_right = 127.5
offset_bottom = 80.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Start new loop" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b3rd3")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_jw2p1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0qlpw")
theme_override_styles/hover = SubResource("StyleBoxFlat_mvuxm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tgduv")
theme_override_styles/normal = SubResource("StyleBoxFlat_bll2y")
text = "Start new loop
"

[node name="Back to Menu" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b3rd3")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_tytww")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_nx5oj")
theme_override_styles/hover = SubResource("StyleBoxFlat_7ljg2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1b440")
theme_override_styles/normal = SubResource("StyleBoxFlat_3mhag")
text = "Back to Menu"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_b3rd3")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_nhgih")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8fmiv")
theme_override_styles/hover = SubResource("StyleBoxFlat_hfikd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x5hoo")
theme_override_styles/normal = SubResource("StyleBoxFlat_tepnl")
text = "Exit"

[connection signal="pressed" from="Buttons/Start new loop" to="." method="_on_start_new_loop_pressed"]
[connection signal="pressed" from="Buttons/Back to Menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
